crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__implicit_concat.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            Infix(
                                InfixExpr {
                                    lhs: Env(
                                        Ident(
                                            "ENV_VAR",
                                        ),
                                    ),
                                    rhs: String(
                                        "/nice",
                                    ),
                                    op: Add,
                                },
                            ),
                            Infix(
                                InfixExpr {
                                    lhs: Ident(
                                        Ident(
                                            "hello",
                                        ),
                                    ),
                                    rhs: String(
                                        "/nice",
                                    ),
                                    op: Add,
                                },
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
