crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__last_status.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            LastStatus,
                            Infix(
                                InfixExpr {
                                    lhs: LastStatus,
                                    rhs: Number(
                                        10.0,
                                    ),
                                    op: Add,
                                },
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
