crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__merge_stderr_pipes.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            String(
                                "hi",
                            ),
                        ],
                        merge_stderr: true,
                    },
                    Command {
                        name: "cat",
                        args: [],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
