crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__merge_stderr_redirect.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            String(
                                "hi",
                            ),
                        ],
                        merge_stderr: true,
                    },
                ],
                write: Some(
                    PipelineEnd {
                        kind: Write,
                        expr: String(
                            "file.txt",
                        ),
                    },
                ),
            },
        ),
    ],
}
