crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__prefix_expressions.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            Infix(
                                InfixExpr {
                                    lhs: Prefix(
                                        PrefixExpr {
                                            expr: Number(
                                                1.0,
                                            ),
                                            op: Neg,
                                        },
                                    ),
                                    rhs: Infix(
                                        InfixExpr {
                                            lhs: Number(
                                                2.0,
                                            ),
                                            rhs: Prefix(
                                                PrefixExpr {
                                                    expr: Number(
                                                        3.0,
                                                    ),
                                                    op: Bang,
                                                },
                                            ),
                                            op: Mul,
                                        },
                                    ),
                                    op: Add,
                                },
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
